# please_kill_me

./: CMakeLists.txt  README.md  main.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitsets/: bitsets.c  bitsets.h
libs/data_structures/circle/: circle.c  circle.h
libs/data_structures/fraction/: fraction.c  fraction.h
libs/data_structures/line/: line.c  line.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/matrix/tasks/: resolve.c  resolve.h
libs/data_structures/matrix/tasks/test_tasksResolve/: test_tasksResolve.c  test_tasksResolve.h
libs/data_structures/matrix/test_matrix/: test_matrix.c  test_matrix.h
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/ordered_array_set/test/: test_ordered_array.c  test_ordered_array.h
libs/data_structures/point/: point.c  point.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/unordered_array_set/test/: test_unordered_array_set.c  test_unordered_array_set.h
libs/data_structures/vector/vector/: vector.c  vector.h
libs/data_structures/vector/vector/test/: test_vector.c  test_vector.h
libs/data_structures/vector/vector_void/: vector_void.c  vector_void.h
libs/data_structures/vector/vector_void/test/: test_vector_void.c  test_vector_void.h
libs/discrete_mathematics/: CMakeLists.txt
libs/experiments/: CMakeLists.txt
(+12 files in other folders)
