add_library(data_structures
        bitsets/bitsets.c
        unordered_array_set/unordered_array_set.c
        ordered_array_set/ordered_array_set.c
        vector/vector/vector.c vector/vector/test/test_vector.c
        vector/vector_void/vector_void.c
        vector/vector_void/test/test_vector_void.c
        matrix/matrix.c
        unordered_array_set/test/test_unordered_array_set.c
        ordered_array_set/test/test_ordered_array.c
        point/point.c
        line/line.c
        circle/circle.c
        fraction/fraction.c
        matrix/test_matrix/test_matrix.c)