add_library(data_structures
        bitsets/bitsets.c
        unordered_array_set/unordered_array_set.c
        ordered_array_set/ordered_array_set.c
        vector/vector/vector.c
        vector/vector_void/vector_void.c
        matrix/matrix.c
        point/point.c
        line/line.c
        circle/circle.c
        fraction/fraction.c)